# django-vue-prueba-tecnica

./: .gitignore  Makefile  docker-compose.test.yml  docker-compose.yml  tree.md
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/api/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/blog/: celery.py  settings.py  urls.py
backend/tests/: test_models.py  test_tasks.py  test_views.py
frontend/: Dockerfile  cypress.config.js  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/styles/: main.css
frontend/src/components/: CommentForm.vue  LoadingSpinner.vue  PostCard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: CategoriesView.vue  HomeView.vue  PostDetailView.vue  PostsView.vue  TagsView.vue
frontend/tests/e2e/specs/: posts.spec.js
frontend/tests/unit/: PostCard.spec.js
